Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.7.1
-
Ubuntu 16.04 LTS 64 bit
clang version 3.8.0-2ubuntu4 (tags/RELEASE_380/final)
Description
clang++ -c -pipe -g -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -Wdate-time -Werror -Wno-error=#warnings -Wno-error=deprecated-declarations -D_REENTRANT -fPIC -DQT_NO_MTDEV -DQT_NO_TSLIB -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_PLUGIN -DQT_WEBENGINE_LIB -DQT_WEBENGINECORE_LIB -DQT_QUICK_LIB -DQT_GUI_LIB -DQT_WEBCHANNEL_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_POSITIONING_LIB -DQT_CORE_LIB -DQT_WEBENGINE_LIB -DQT_WEBENGINECORE_LIB -DQT_QUICK_LIB -DQT_GUI_LIB -DQT_WEBCHANNEL_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_POSITIONING_LIB -DQT_CORE_LIB -I/home/qtrob/dev/src/qt-5.7.1-pre/qtwebengine/src/webengine/plugin -I. -I/home/qtrob/dev/src/qt-5.7.1-pre/qtwebengine/src/core -I/home/qtrob/dev/src/qt-5.7.1-pre/qtwebengine/src/core/api -I/home/qtrob/dev/src/qt-5.7.1-pre/qtwebengine/src/webengine -I/home/qtrob/dev/src/qt-5.7.1-pre/qtwebengine/src/webengine/api -I/home/qtrob/dev/src/qt-5.7.1-pre/qtwebengine/include/QtWebEngine -I/home/qtrob/dev/clang-3.8.0/qt-5.7.1-pre/qtbase/include -I/home/qtrob/dev/clang-3.8.0/qt-5.7.1-pre/qtbase/include/QtWebEngine -I/home/qtrob/dev/clang-3.8.0/qt-5.7.1-pre/qtbase/include/QtWebEngineCore -I/home/qtrob/dev/clang-3.8.0/qt-5.7.1-pre/qtbase/include/QtQuick -I/home/qtrob/dev/clang-3.8.0/qt-5.7.1-pre/qtbase/include/QtGui -I/home/qtrob/dev/clang-3.8.0/qt-5.7.1-pre/qtbase/include/QtWebChannel -I/home/qtrob/dev/clang-3.8.0/qt-5.7.1-pre/qtbase/include/QtQml -I/home/qtrob/dev/clang-3.8.0/qt-5.7.1-pre/qtbase/include/QtNetwork -I/home/qtrob/dev/clang-3.8.0/qt-5.7.1-pre/qtbase/include/QtPositioning -I/home/qtrob/dev/clang-3.8.0/qt-5.7.1-pre/qtbase/include/QtCore -I/home/qtrob/dev/clang-3.8.0/qt-5.7.1-pre/qtbase/include/QtWebEngine/5.7.1 -I/home/qtrob/dev/clang-3.8.0/qt-5.7.1-pre/qtbase/include/QtWebEngine/5.7.1/QtWebEngine -I.moc -isystem /usr/include/libdrm -I/home/qtrob/dev/src/qt-5.7.1-pre/qtbase/mkspecs/linux-clang -o .obj/plugin.o /home/qtrob/dev/src/qt-5.7.1-pre/qtwebengine/src/webengine/plugin/plugin.cpp /home/qtrob/dev/src/qt-5.7.1-pre/qtwebengine/src/webengine/plugin/plugin.cpp:67:18: error: 'initializeEngine' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override] virtual void initializeEngine(QQmlEngine *engine, const char *uri) ^ /home/qtrob/dev/clang-3.8.0/qt-5.7.1-pre/qtbase/include/QtQml/../../../../../src/qt-5.7.1-pre/qtdeclarative/src/qml/qml/qqmlextensionplugin.h:67:18: note: overridden virtual function is here virtual void initializeEngine(QQmlEngine *engine, const char *uri); ^ 1 error generated.
Full log attached.
Attachments
For Gerrit Dashboard: QTBUG-56870 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
175573,2 | Add missing override to initializeEngine in plugin | 5.7 | qt/qtwebengine | Status: MERGED | +2 | 0 |