Add missing override to initializeEngine in plugin

Task-number: QTBUG-56870
Change-Id: I36338a1a29bc4e82f5c84cfa1ea641b8df3b5f4f
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>