src/webengine/plugin/plugin.cpp
@@ -64,7 +64,7 @@ class QtWebEnginePlugin : public QQmlExtensionPlugin
     Q_OBJECT
     Q_PLUGIN_METADATA(IID "org.qt-project.Qt.QQmlExtensionInterface/1.0")
 public:
-    virtual void initializeEngine(QQmlEngine *engine, const char *uri)
+    virtual void initializeEngine(QQmlEngine *engine, const char *uri) Q_DECL_OVERRIDE
     {
         Q_UNUSED(uri);
         engine->addImageProvider(QQuickWebEngineFaviconProvider::identifier(), new QQuickWebEngineFaviconProvider);
